--- a/base/public/index.html
+++ b/base/public/index.html
@@ -26,6 +26,7 @@
 
             <div class="optionsNav">
                 <button type="btn" class="sesion" id="myBtn">Iniciar Sesion</button>
+                <button type="btn" class="sesion" id="myBtnIniciar" onclick="location.replace('registrar_cliente.html')">Registrarme</button>
             </div>
         </nav>
 
@@ -60,7 +61,7 @@
                 </div>
                 <div class="forgot">
                     <a href="">Olvidé mi contraseña</a>
-                    <a href="">Registrarme</a>
+                    <a href="registrar_cliente.html">Registrarme</a>
                 </div>
             </div>
 
