--- a/base/public/landingBamboo.html
+++ b/base/public/landingBamboo.html
@@ -15,9 +15,9 @@
         <nav class="nav-container">
             <a href="#"><img src="./imgs/bambooLogo.png" alt="LogoVincentVanGoat" width="40px"></a>
             <a href="#">Bamboo</a>
-            <a href="#">Visión</a>
-            <a href="#">Misión</a>
-            <a href="#">Productos</a>
+            <a href="#misionVision">Misión & Visión</a>
+            <a href="#integrantesBamboo">Sobre nosotros</a>
+            <a href="#footer">Productos</a>
             <nav>
 
     </header>
@@ -30,7 +30,7 @@
             <span>- Vince Lombardi</span>
 
         </div>
-        <div class="info-container">
+        <div class="info-container" id="misionVision">
 
             <div class="menu">
                 <h4 id="missionH">Mision</h4>
@@ -54,7 +54,7 @@
 
         </div>
         <h2>Integrantes</h2>
-        <div class="container">
+        <div class="container" id="integrantesBamboo">
 
             <div class="galerias">
 
@@ -92,8 +92,8 @@
             <div class="galerias">
 
                 <div class="info-integrante">
-                    <h2>Sebastian</h2>
-                    <p>Coordinador</p>
+                    <h2>Natalia</h2>
+                    <p>Soporte</p>
                 </div>
 
                 <div class="caract-integrante">
@@ -101,10 +101,10 @@
                         <h3>Fortalezas</h3>
 
                         <ul>
-                            <li>Puntualidad</li>
-                            <li>Respetuoso</li>
+                            <li>Ordenada</li>
+                            <li>Respetuosa</li>
                             <li>Optimista</li>
-                            <li>Honesto</li>
+                            <li>Organizada</li>
                         </ul>
                     </div>
 
@@ -112,10 +112,10 @@
                         <h3>Debilidades</h3>
 
                         <ul>
-                            <li>Nervioso</li>
-                            <li>Manejo de Tiempo</li>
-                            <li>No muy comunicativo</li>
-                            <li>Inseguro</li>
+                            <li>Sensible</li>
+                            <li>Insegura</li>
+                            <li>Tímida</li>
+                            <li>Nerviosa</li>
                         </ul>
                     </div>
                 </div>
@@ -125,8 +125,8 @@
             <div class="galerias">
 
                 <div class="info-integrante">
-                    <h2>Sebastian</h2>
-                    <p>Coordinador</p>
+                    <h2>Ariana</h2>
+                    <p>Soporte</p>
                 </div>
 
                 <div class="caract-integrante">
@@ -134,10 +134,10 @@
                         <h3>Fortalezas</h3>
 
                         <ul>
-                            <li>Puntualidad</li>
-                            <li>Respetuoso</li>
-                            <li>Optimista</li>
-                            <li>Honesto</li>
+                            <li>Amigable</li>
+                            <li>Respetuosa</li>
+                            <li>Ordenada</li>
+                            <li>Responsable</li>
                         </ul>
                     </div>
 
@@ -145,10 +145,10 @@
                         <h3>Debilidades</h3>
 
                         <ul>
-                            <li>Nervioso</li>
-                            <li>Manejo de Tiempo</li>
-                            <li>No muy comunicativo</li>
-                            <li>Inseguro</li>
+                            <li>Dudosa</li>
+                            <li>Impaciente</li>
+                            <li>Ansiosa</li>
+                            <li>Dispera</li>
                         </ul>
                     </div>
                 </div>
@@ -158,8 +158,8 @@
             <div class="galerias">
 
                 <div class="info-integrante">
-                    <h2>Sebastian</h2>
-                    <p>Coordinador</p>
+                    <h2>Diego</h2>
+                    <p>Calidad</p>
                 </div>
 
                 <div class="caract-integrante">
@@ -167,10 +167,10 @@
                         <h3>Fortalezas</h3>
 
                         <ul>
-                            <li>Puntualidad</li>
+                            <li>Entusiasta</li>
                             <li>Respetuoso</li>
                             <li>Optimista</li>
-                            <li>Honesto</li>
+                            <li>Discreto</li>
                         </ul>
                     </div>
 
@@ -178,10 +178,10 @@
                         <h3>Debilidades</h3>
 
                         <ul>
-                            <li>Nervioso</li>
+                            <li>Distraído</li>
                             <li>Manejo de Tiempo</li>
-                            <li>No muy comunicativo</li>
-                            <li>Inseguro</li>
+                            <li>Efectividad</li>
+                            <li>Puntualidad</li>
                         </ul>
                     </div>
                 </div>
@@ -191,8 +191,8 @@
             <div class="galerias">
 
                 <div class="info-integrante">
-                    <h2>Sebastian</h2>
-                    <p>Coordinador</p>
+                    <h2>Axel</h2>
+                    <p>Calidad</p>
                 </div>
 
                 <div class="caract-integrante">
@@ -200,10 +200,10 @@
                         <h3>Fortalezas</h3>
 
                         <ul>
-                            <li>Puntualidad</li>
+                            <li>Ordenado</li>
                             <li>Respetuoso</li>
                             <li>Optimista</li>
-                            <li>Honesto</li>
+                            <li>Paciente</li>
                         </ul>
                     </div>
 
@@ -211,10 +211,10 @@
                         <h3>Debilidades</h3>
 
                         <ul>
-                            <li>Nervioso</li>
-                            <li>Manejo de Tiempo</li>
-                            <li>No muy comunicativo</li>
-                            <li>Inseguro</li>
+                            <li>Dudoso</li>
+                            <li>Hablar en Público</li>
+                            <li>Tímido</li>
+                            <li>Manejo del Tiempo</li>
                         </ul>
                     </div>
                 </div>
@@ -224,8 +224,8 @@
             <div class="galerias">
 
                 <div class="info-integrante">
-                    <h2>Sebastian</h2>
-                    <p>Coordinador</p>
+                    <h2>Fabricio</h2>
+                    <p>Desarrollo</p>
                 </div>
 
                 <div class="caract-integrante">
@@ -233,10 +233,10 @@
                         <h3>Fortalezas</h3>
 
                         <ul>
-                            <li>Puntualidad</li>
+                            <li>Analítico</li>
                             <li>Respetuoso</li>
-                            <li>Optimista</li>
-                            <li>Honesto</li>
+                            <li>Paciente</li>
+                            <li>Creativo</li>
                         </ul>
                     </div>
 
@@ -244,10 +244,10 @@
                         <h3>Debilidades</h3>
 
                         <ul>
+                            <li>Callado</li>
+                            <li>Tímido</li>
                             <li>Nervioso</li>
-                            <li>Manejo de Tiempo</li>
-                            <li>No muy comunicativo</li>
-                            <li>Inseguro</li>
+                            <li>Disperso</li>
                         </ul>
                     </div>
                 </div>
@@ -258,7 +258,7 @@
         </div>
 
     </main>
-    <footer>
+    <footer id="footer">
 
         <div class="footer">
             <div class="footone">
@@ -266,17 +266,7 @@
                 <h1> Bamboo</h1>
                 <p>coding since 2019</p>
             </div>
-            <div class="foottwo">
-                <h1>historia</h1>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-                    deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
-                    providen </p>
-            </div>
-            <div class="footthree">
-              
-
-                </form>
-            </div>
+           
             <div class="footfour">
                 <h2>¿querés ver en lo que estamos trabajando?</h2>
                 <input type="button" class="buttonArt" value="Llevame a Bamboooks"  onclick="location.replace('index.html')">
