--- a/base/public/registrar_cliente.html
+++ b/base/public/registrar_cliente.html
@@ -22,11 +22,11 @@
   <header>
       <nav>
         <div class="logoBambooks">
-          <a href="" id="logoRedirect"><img
+          <a href="inicioCliente.html"><img
               src="imgs/panda_grain.png"
               alt="" width="40px"></a>
         </div>
-        <div class="nav-container" id="nav-containers">
+        <div class="nav-container">
           <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
           <a href="listar_sucursales.html" id="optionNavSucursales">Sucursales</a>
           <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
@@ -38,7 +38,7 @@
           <a href="#" id="optionIntercambio">Intercambios</a>
           <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
         </div>
-        <div class="optionsNav" id="optionsNavs">
+        <div class="optionsNav">
             <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
           <div class="dropdown-content">
             <a href="#">Link 1</a>
