--- a/base/public/ver-perfil-autor.html
+++ b/base/public/ver-perfil-autor.html
@@ -8,10 +8,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/ver-perfil-autor.css">
+    <link rel="stylesheet" href="css/navbar.css">
 </head>
 
 <body>
-    <nav>
+  <header>
+        <nav>
       <div class="logoBambooks">
         <a href="inicioCliente.html"><img
             src="imgs/panda_grain.png"
@@ -44,7 +46,7 @@
 
 <body>
 
-    </nav>
+   
     <main>
         <h2>Autor <span id="txt_nombre"></span> </h2>
         <p><span id="foto"></span></p>
