--- a/base/public/listar_sucursales.html
+++ b/base/public/listar_sucursales.html
@@ -9,6 +9,7 @@
         <title>Listar Sucursales</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/listar_sucursales.css">
+        <link rel="stylesheet" href="css/listar_librerias.css">
         <link rel="stylesheet" href="css/navbar.css">
     </head>
 
