--- a/base/public/listar-usuarios.html
+++ b/base/public/listar-usuarios.html
@@ -46,7 +46,7 @@
 <body>
 
             <main>
-    <input type="text" id="txt_filtro" placeholder="Filtrar Correo/Identificación" style="width: 170px">
+    <input type="text" id="txt_filtro" placeholder="Filtrar" style="width: 170px">
     <a href="registrar_cliente.html"><button>Registrar Usuario</button></a>
     <table id="tbl-usuarios">
         <thead>
