--- a/base/public/registrar_libreria.html
+++ b/base/public/registrar_libreria.html
@@ -14,11 +14,11 @@
 <header>
     <nav>
       <div class="logoBambooks">
-        <a href="inicioCliente.html"><img
+        <a href="inicioCliente.html" id="logoRedirect"><img
             src="imgs/panda_grain.png"
             alt="" width="40px"></a>
       </div>
-      <div class="nav-container">
+      <div class="nav-container" id="nav-containers">
         <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
         <a href="listar_sucursales.html" id="optionNavSucursales">Sucursales</a>
         <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
@@ -30,7 +30,7 @@
         <a href="#" id="optionIntercambio">Intercambios</a>
         <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
       </div>
-      <div class="optionsNav">
+      <div class="optionsNav" id="optionsNavs">
           <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
         <div class="dropdown-content">
           <a href="#">Link 1</a>
@@ -42,7 +42,6 @@
       </div>
     </nav>
   </header>
-
 <body>
     <main>
 
