--- a/base/public/registrar_cliente.html
+++ b/base/public/registrar_cliente.html
@@ -22,11 +22,11 @@
   <header>
       <nav>
         <div class="logoBambooks">
-          <a href="inicioCliente.html"><img
+          <a href="inicioCliente.html" id="logoRedirect"><img
               src="imgs/panda_grain.png"
               alt="" width="40px"></a>
         </div>
-        <div class="nav-container">
+        <div class="nav-container" id="nav-containers">
           <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
           <a href="listar_sucursales.html" id="optionNavSucursales">Sucursales</a>
           <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
@@ -38,7 +38,7 @@
           <a href="#" id="optionIntercambio">Intercambios</a>
           <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
         </div>
-        <div class="optionsNav">
+        <div class="optionsNav" id="optionsNavs">
             <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
           <div class="dropdown-content">
             <a href="#">Link 1</a>
@@ -50,7 +50,6 @@
         </div>
       </nav>
     </header>
-
   <body>
 
 
@@ -124,7 +123,7 @@
 
     </main>
 
-
+    <script src="js/notSignedIn.js"></script>
     <script src="js/jquery-3.3.1.js"></script>
 
     <script src="js/stringProvincias.js"></script>
@@ -137,7 +136,7 @@
     <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
     <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     <script src="js/servicio_avatar.js"></script>
-    <script src="js/notSignedIn.js"></script>
+    
     <script src="js/controlador_cerrar_sesion.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
