--- a/base/public/registrar_libro.html
+++ b/base/public/registrar_libro.html
@@ -76,6 +76,8 @@
                 <select name="tipo" id="txt_tipo">
                     <option value="">Tipo</option>
                     <option value="Pasta dura">Pasta dura</option>
+                    <option value="Pasta gruesa">Pasta gruesa</option>
+                    <option value="bolsillo">Bolsillo</option>
                     <option value="Digital">Digital</option>
 
                 </select>
