--- a/base/public/listar_librerias_admins.html
+++ b/base/public/listar_librerias_admins.html
@@ -20,7 +20,7 @@
                 alt="" width="40px"></a>
           </div>
           <div class="nav-container">
-            <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
+            <a href="listar_librerias_admins.html" id="optionNavLibrerias">Librerias</a>
             <a href="listar_sucursales.html" id="optionNavSucursales">Sucursales</a>
             <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
             <a href="listar_libros.html" id="optionNavLibros">Libros</a>
@@ -85,11 +85,12 @@
 
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="js/jquery-3.3.1.js"></script>
+
         <script src="js/servicio_librerias.js"></script>
 
-        <script src="js/controlador_listar_librerias.js"></script>
-        <script src="js/controlador_registrar_sucursal.js"></script>
+        <script src="js/controlador_listar_librerias_admins.js"></script>
         <script src="js/controlador_cerrar_sesion.js"></script>
+
         <script src="js/getNombre.js"></script>
         <script src="js/hideRegistro.js"></script>
     
