--- a/base/public/registrar_sucursal.html
+++ b/base/public/registrar_sucursal.html
@@ -20,7 +20,7 @@
                 alt="" width="40px"></a>
           </div>
           <div class="nav-container">
-            <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
+            <a href="listar_librerias_admins.html" id="optionNavLibrerias">Librerias</a>
             <a href="listar_sucursales.html" id="optionNavSucursales">Sucursales</a>
             <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
             <a href="listar_libros.html" id="optionNavLibros">Libros</a>
