--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -19,7 +19,7 @@
                 alt="" width="40px"></a>
           </div>
           <div class="nav-container">
-            <a href="listar_librerias_admins.html" id="optionNavLibrerias">Librerias</a>
+            <a href="listar_librerias_cliente.html" id="optionNavLibrerias">Librerias</a>
             <a href="listar_sucursales.html" id="optionNavSucursales">Sucursales</a>
             <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
             <a href="listar_libros.html" id="optionNavLibros">Libros</a>
