--- a/base/public/index.html
+++ b/base/public/index.html
@@ -9,8 +9,9 @@
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/landingPageVisitor.css">
+ 
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/landingPageVisitor.css">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
@@ -30,7 +31,6 @@
     </div>
 </header>
 
-<body>
 
 
     <body>
@@ -221,7 +221,7 @@
             <div class="footermap">
                 <div class="list">
                     <ul>
-                        <li><a href="">Librerias</a></li>
+                        <li class="uhead"><a href="">Librerias</a></li>
                         <ul>
                             <li><a href="">Ver las librerias</a></li>
                             <li><a href="">Registrar mi libreria</a></li>
@@ -230,7 +230,7 @@
                         </ul>
                     </ul>
                     <ul>
-                        <li><a href="">Libros</a></li>
+                        <li class="uhead"><a href="" >Libros</a></li>
                         <ul>
                             <li><a href="">Ver todos los libros</a></li>
                             <li><a href="">Categorías</a></li>
@@ -242,7 +242,7 @@
                 </div>
                 <div class="list">
                     <ul>
-                        <li><a href="">Clubes de Lectura</a></li>
+                        <li class="uhead"><a href="">Clubes de Lectura</a></li>
                         <ul>
                             <li><a href="">Ver los clubes</a></li>
                             <li><a href="">Crear mi club</a></li>
@@ -327,7 +327,7 @@
       
       </section>
         !-->
-    </body>
+   
 
 </body>
 
