yet another commit

--- a/base/public/index.html
+++ b/base/public/index.html
@@ -50,8 +50,8 @@
                 </li>
                 <li class="parent" id="dropdown"><a href="#">Clubes de Lectura</a>
                     <ul class="child">
-                        <li><a href="#">Ver todos los Clubes</a></li>
-                        <li><a href="#">Ver mis Clubes</a></li>
+                        <li><a href="#">Ver los clubes</a></li>
+                        <li><a href="#">Mis clubes</a></li>
                     </ul>
                 </li>
             </ul>
