--- a/base/public/visualizar_perfil_libreria.html
+++ b/base/public/visualizar_perfil_libreria.html
@@ -57,6 +57,14 @@
 
         <section id="sucursales">
 
+            <table id="tbl_sucursales">
+
+                <tbody>
+        
+                </tbody>
+        
+            </table>
+
         </section>
 
 
@@ -132,7 +140,6 @@
 
 
 
-    <script src="js/getNombre.js"></script>
 
     <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js'
         type='text/javascript'></script>
