--- a/base/public/registrar_libro.html
+++ b/base/public/registrar_libro.html
@@ -102,6 +102,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/servicio_libro.js"></script>
     <script src="js/servicio_genero.js"></script>
+    <script src="js/servicio_inventarioGeneral.js"></script>
 
     <!-- Script servicio subir imagen, clodinari -->
     <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
