--- a/base/public/listar_librerias.html
+++ b/base/public/listar_librerias.html
@@ -28,7 +28,7 @@
 
         <nav class="nav-menu">
             <ul>
-                <li class="parent"><a href="#">Librerias</a>
+                <li class="parent"><a href="#" class="hovernav">Librerias</a>
                     <ul class="child">
                         <li><a href="#">Sucursales</a></li>
                         <li><a href="#">Ofertas</a></li>
