--- a/base/public/visualizar_perfil_libreria.html
+++ b/base/public/visualizar_perfil_libreria.html
@@ -32,7 +32,7 @@
 
     <nav class="nav-menu">
         <ul>
-            <li class="parent"><a href="#">Librerias</a>
+            <li class="parent"><a class="hovernav" href="#">Librerias</a>
                 <ul class="child">
                     <li><a href="#">Sucursales</a></li>
                     <li><a href="#">Ofertas</a></li>
@@ -66,6 +66,11 @@
         <section id="sucursales">
 
             <table id="tbl_sucursales">
+
+                <thead>
+                    <th>Sucursales</th>
+                    <th></th>
+                </thead>
 
                 <tbody>
         
