--- a/base/public/index.html
+++ b/base/public/index.html
@@ -226,7 +226,7 @@
 
         <section id="footer">
             <div class="footerLogo">
-                <img src="imgs/panda_verde.png" width="150px">
+                <img src="imgs/panda_negro.png" width="150px">
             </div>
             <div class="footermap">
                 <div class="list">
