--- a/base/public/index.html
+++ b/base/public/index.html
@@ -44,7 +44,7 @@
                 </li>
                 <li class="parent" id="dropdown"><a href="#">Libros</a>
                     <ul class="child">
-                        <li><a href="#">Géneros</a></li>
+                        <li><a href="listar_genero.html">Géneros</a></li>
                         <li><a href="#">Categorías</a></li>
                     </ul>
                 </li>
@@ -221,6 +221,7 @@
 
         <section id="ofertas">
             <h1>Ofertas </h1>
+            
         </section>
 
 
