--- a/base/public/visualizarperfil_admingeneral.html
+++ b/base/public/visualizarperfil_admingeneral.html
@@ -52,15 +52,12 @@
 
 
 
-
-    <div class="datos">
-
-      <div id="avatar"></div>
-
-      <p class="dato"> <span id="txt_nombre">Usuario</span></p>
-
-      <p class="dato"> <span id="txt_correo"> Correo </span></p>
-
+        <p><span id="avatar"></span></p>
+        <p>Usuario: <span id="txt_primerNombre"></span></p>
+        <p>Primer Apellido: <span id="txt_primerApellido"></span></p>
+        <p>Identificación: <span id="txt_identificacion"></span></p>
+        <p>Correo: <span id="txt_correo"></span></p>
+   
 
 
     </div>
