--- a/base/public/listar_libros.html
+++ b/base/public/listar_libros.html
@@ -57,18 +57,18 @@
         <table id="tbl_libros">
             <thead>
                 <tr>
-                    <th>Titulo</th>
-                    <th>Edicion</th>
-                    <th>Editorial</th>
+                    <th>Título</th>
                     <th>Autor</th>
-                    <th>Año de edición</th>
-                    <th>Idioma</th>
-                    <th>ISBN</th>
+                    <th>Edición</th>
                     <th>Género</th>
-                    <th>Tipo</th>
-                    <th>Existencia</th>
-                    <th>Precio</th>
-                    <th>Portada</th>
+                    <th>Año de edición</th>
+                    <!-- <th>Editorial</th> -->
+                    <!-- <th>Idioma</th> -->
+                    <!-- <th>ISBN</th> -->
+                    <!-- <th>Tipo</th> -->
+                    <!-- <th>Existencia</th> -->
+                    <!-- <th>Precio</th> -->
+                    <!-- <th>Portada</th> -->
                     <th></th>
                 </tr>
             </thead>
