--- a/base/public/registrar_libro.html
+++ b/base/public/registrar_libro.html
@@ -75,11 +75,11 @@
           </div>
           <div>
             <label for="autor">Autor:</label>
-            <select name="autor" id="txt_autor">
+            <select name="autor" id="txt-nombre-autor">
               <option value=""></option>
-              <option>Autor 1</option>
+              <!-- <option>Autor 1</option>
               <option>Autor 2</option>
-              <option>Autor 3</option>
+              <option>Autor 3</option> -->
             </select>
           </div>
           <div>
@@ -92,12 +92,12 @@
               <option value=""></option>
               <option>Español</option>
               <option>Inglés</option>
-              <option>Francés</option>
             </select>
           </div>
           <div>
             <label for="txt_isbn">ISBN:</label>
             <input id="txt_isbn" type="number">
+          </form>
           </div>
           <div>
             <label for="genero">Seleccionar género</label>
@@ -128,7 +128,7 @@
       </section>
 
       <div>
-        <button type="button" class="boton-registrar" id="btn_registrar">Registrar</button>
+        <button type="button" class="boton-registrar" id="btn_registrar" >Registrar</button>
       </div>
 
     </section>
@@ -145,6 +145,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
   <script src="js/servicio_libro.js"></script>
   <script src="js/servicio_genero.js"></script>
+  <script src="js/servicio-autor.js"></script>
 
   <!-- Script servicio subir imagen, clodinari -->
   <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
