--- a/base/public/registrar_sucursal.html
+++ b/base/public/registrar_sucursal.html
@@ -28,7 +28,7 @@
     
       <nav class="nav-menu">
           <ul>
-              <li class="parent"><a href="#">Librerías</a>
+              <li class="parent"><a class="hovernav" href="#">Librerías</a>
                   <ul class="child">
                       <li><a href="#">Sucursales</a></li>
                       <li><a href="#">Ofertas</a></li>
@@ -87,7 +87,7 @@
     <section id="footer">
 
         <div class="footerLogo">
-            <img src="imgs/panda_negro.png" width="150px">
+            <img src="imgs/panda_blanco.png" width="150px">
         </div>
         <div class="footermap">
 
@@ -132,15 +132,15 @@
         </div>
 
         <div class="socials">
-            <img src="https://img.icons8.com/ios-filled/40/000000/horizontal-line.png">
+            <img src="https://img.icons8.com/ios-filled/20/ffffff/horizontal-line.png">
 
-            <img src="https://img.icons8.com/ios-filled/40/000000/facebook-new.png">
+            <img src="https://img.icons8.com/ios-filled/20/ffffff/facebook-new.png">
 
-            <img src="https://img.icons8.com/ios-filled/40/000000/instagram-new.png">
+            <img src="https://img.icons8.com/ios-filled/20/ffffff/instagram-new.png">
 
-            <img src="https://img.icons8.com/windows/40/000000/twitter.png">
+            <img src="https://img.icons8.com/windows/20/ffffff/twitter.png">
 
-            <img src="https://img.icons8.com/ios-filled/40/000000/horizontal-line.png">
+            <img src="https://img.icons8.com/ios-filled/20/ffffff/horizontal-line.png">
                                 
             <div class="line-soc"></div>
             <div>
