--- a/base/public/registrar_libreria.html
+++ b/base/public/registrar_libreria.html
@@ -69,6 +69,25 @@
 
             <input id="txt_nombre_usuario" type="text" placeholder="Nombre Usuario">
 
+            <select name="" id="txt_provincia" onchange="llenarCantones(value)">
+                <option value="#">Seleccionar Provincia </option>
+            </select>
+              
+            <select name="" id="txt_canton" onchange="llenarDistritos(value)">
+              <option value="#">Seleccionar Cantón</option>
+            </select>
+                
+            <select name="" id="txt_distrito">
+              <option value="#">Seleccionar Distrito</option>
+            </select>
+
+            <div class="subir_avatar">
+                <figure class="avatar">
+                    <img src="imgs/img_avatar.jpg" alt="Seleccionar imagen" id="img_avatar">
+                </figure>
+                <button type="button" id="btn_seleccionar_avatar" class="boton_subir_avatar">Subir imagen </button>
+            </div>
+
         </section>
 
         <button id="btn_registrar"> Registrar </button>
@@ -86,9 +105,16 @@
     <script src="js/servicio_librerias.js"></script>
     <script src="js/servicio_usuario.js"></script>
     <script src="js/controlador_registrar_libreria.js"></script>
-    <script src="js/controlador_cerrar_sesion.js"></script>
-    <script src="js/notSignedIn.js"></script>
+
+    <!-- <script src="js/controlador_cerrar_sesion.js"></script> -->
+    <!-- <script src="js/notSignedIn.js"></script> -->
+
+    <script src="js/stringProvincias.js"></script>
+    <script src="js/ubicacion.js"></script>
    
+    <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
+    <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+    <script src="js/servicio_avatar.js"></script>
 
 </body>
 
