--- a/base/public/registrar_libro.html
+++ b/base/public/registrar_libro.html
@@ -58,7 +58,7 @@
         <button type="button" id="btn_seleccionar_imagen" class="boton_subir_imagen">Subir imagen </button>
       </div>
 
-
+<!-- Aquí empieza el formulario del libro -->
       <section id="sct_formulario">
         <form>
           <div>
@@ -97,38 +97,38 @@
           <div>
             <label for="txt_isbn">ISBN:</label>
             <input id="txt_isbn" type="number">
-          </form>
-          </div>
-          <div>
-            <label for="genero">Seleccionar género</label>
-            <select name="genero" id="txt_genero">
-              <option value=""></option>
-            </select>
-          </div>
-          <div>
-            <label for="tipo">Tipo</label>
-            <select name="tipo" id="txt_tipo">
-              <option value=""></option>
-              <option value="Digital">Digital</option>
-              <option value="Pasta dura">Pasta dura</option>
-              <option value="Pasta gruesa">Pasta gruesa</option>
-              <option value="bolsillo">Bolsillo</option>
-            </select>
-          </div>
-          <div>
-            <label for="existencia">Existencia:</label>
-            <input id="txt_existencia" type="number">
-          </div>
-          <div>
-            <label for="precio">Precio:</label>
-            <input id="txt_precio" type="number">
-          </div>
+        </form>
+        </div>
+        <div>
+          <label for="genero">Seleccionar género</label>
+          <select name="genero" id="txt_genero">
+            <option value=""></option>
+          </select>
+        </div>
+        <div>
+          <label for="tipo">Tipo</label>
+          <select name="tipo" id="txt_tipo">
+            <option value=""></option>
+            <option value="Digital">Digital</option>
+            <option value="Pasta dura">Pasta dura</option>
+            <option value="Pasta gruesa">Pasta gruesa</option>
+            <option value="bolsillo">Bolsillo</option>
+          </select>
+        </div>
+        <div>
+          <label for="existencia">Existencia:</label>
+          <input id="txt_existencia" type="number">
+        </div>
+        <div>
+          <label for="precio">Precio:</label>
+          <input id="txt_precio" type="number">
+        </div>
 
         </form>
       </section>
 
       <div>
-        <button type="button" class="boton-registrar" id="btn_registrar" >Registrar</button>
+        <button type="button" class="boton-registrar" id="btn_registrar">Registrar</button>
       </div>
 
     </section>
