--- a/base/public/listar_tarjetas.html
+++ b/base/public/listar_tarjetas.html
@@ -60,7 +60,7 @@
                  
                     <div>
                             <label for="">Número de Tarjeta</label>
-                            <input type="text" id="ccnum" name="cardnumber" placeholder="1111222233334444">                        </div>
+                            <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">                        </div>
     
                         <div>
                             <label for="">Fecha de Vencimiento</label>
