--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -31,7 +31,7 @@
             <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
           </div>
           <div class="optionsNav">
-              <a href="visualizarperfil_admingeneral.html" class="perfil" id="nombrePerfil">Mi perfil</a>
+              <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
             <div class="dropdown-content">
               <a href="#">Link 1</a>
               <a href="#">Link 2</a>
