--- a/base/public/listar_tarjetas.html
+++ b/base/public/listar_tarjetas.html
@@ -60,7 +60,7 @@
                  
                     <div>
                             <label for="">Número de Tarjeta</label>
-                            <input type="number" id="txt-numerotarjeta-"  placeholder="1111-2222-3333-4444">                        </div>
+                            <input type="number" id="txt-numerotarjeta"  placeholder="1111-2222-3333-4444">                        </div>
                             <div>
 
                         <div>
