--- a/base/public/visualizarperfil_admingeneral.html
+++ b/base/public/visualizarperfil_admingeneral.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/perfil_admin.css">
+  <link rel="stylesheet" href="css/footer.css">
+
 
 </head>
 
