--- a/base/public/agregar_inventario.html
+++ b/base/public/agregar_inventario.html
@@ -22,13 +22,20 @@
 
         <main>
 
-            
+            <div>
 
+          <label for="">Existencias</label>
+          <input type="number" id = "txt-existencias" >
+
+          </div>
+
+          <button type = "button" class = "agregar" id = "btn-agregar">Agregar Existencias</button>
 
         </main>
 
         
-
+        <script src = "js/controlador_agregar_inventarioGeneral.js"></script>
+        <script src = "js/servicio_inventarioGeneral.js"></script>
 
     </body>
 
