--- a/base/public/listar_tarjetas.html
+++ b/base/public/listar_tarjetas.html
@@ -89,6 +89,7 @@
                 <th>Número de Tarjeta</th>
                 <th>Fecha de Vencimiento</th>
                 <th>Código CVV</th>
+                <th>Editar</th>
             </tr>
         </thead>
         <tbody>
