--- a/base/public/modificar_genero.html
+++ b/base/public/modificar_genero.html
@@ -55,7 +55,7 @@
                   </div>
                 </div>
       
-                <button type="button" class="agregar" id="btn-agregar">Agregar Género</button>
+                <button type="button" class="agregar" id="btn-modificar">Guardar Género</button>
               </form>
 
 </main>
