--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -29,6 +29,13 @@
             <a href="listar_tarjetas.html">Tarjetas</a>
             <a href="#" id="optionIntercambio">Intercambios</a>
             <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
+            
+            <!--
+              SOLO PARA PROBAR EL MODIFICAR CONTRASENNA
+        
+              <a href="modificar_contrasenna.html" id = "optionNavModificarContrasenna">Modificar Contrasenna</a>
+
+            -->
           </div>
           <div class="optionsNav">
               <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
