--- a/base/public/modificar_libro.html
+++ b/base/public/modificar_libro.html
@@ -129,7 +129,7 @@
       </section>
 
       <div>
-        <button type="button" class="boton-registrar" id="btn_modificar"  href="listar_libros.html" >Guardar</button>
+        <button type="button" class="boton-registrar" id="btn_guardar" >Guardar</button>
       </div>
 
     </section>
@@ -139,12 +139,13 @@
   <footer></footer>
 
   <script src="js/jquery-3.3.1.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <!-- script controlador -->
-
+  <script src="js/servicio_libro.js"></script>
   <script src="js/controlador_cerrar_sesion.js"></script>
   <script src="js/controlador_modificar_libro.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
-  <script src="js/servicio_libro.js"></script>
+
   <script src="js/servicio_genero.js"></script>
   <script src="js/servicio-autor.js"></script>
 
@@ -152,8 +153,7 @@
   <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
   <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
   <script src="js/servicio_imagen.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="js/getNombre.js"></script>
+ 
 
 
 </body>
