--- a/base/public/modificar_sucursal.html
+++ b/base/public/modificar_sucursal.html
@@ -80,7 +80,7 @@
         <section id="localizacion">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.1915192287242!2d-84.04903608571853!3d9.918001777163246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e397932ca451%3A0xef8088362eda931!2sMultiplaza+Curridabat!5e0!3m2!1ses-419!2scr!4v1562653229172!5m2!1ses-419!2scr"
-                frameborder="0" style="border:0" allowfullscreen></iframe>
+                frameborder="0" style="border:0" allowfullscreen><iframe>
         </section>
 
         <button id="btn_modificar"> Modificar </button>
