--- a/base/public/listar_tarjetas.html
+++ b/base/public/listar_tarjetas.html
@@ -90,6 +90,11 @@
                 <th>Fecha de Vencimiento</th>
                 <th>Código CVV</th>
                 <th>Editar</th>
+                <th>Estado</th>
+                <th>Eliminar</th>
+
+
+
             </tr>
         </thead>
         <tbody>
