--- a/base/public/modificar_genero.html
+++ b/base/public/modificar_genero.html
@@ -132,13 +132,17 @@
 <footer></footer>
 
 
+</body>
 
 
 <script src="js/jquery-3.3.1.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 
   <!-- script controlador -->
 
   <script src="js/controlador_cerrar_sesion.js"></script>
+
   <script src="js/controlador_modificar_genero.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
   <script src="js/servicio_genero.js"></script>
@@ -146,6 +150,5 @@
   <script src="js/controlador_cerrar_sesion.js"></script>
 
 
-</body>
 
 </html>
