--- a/base/public/listar_libros.html
+++ b/base/public/listar_libros.html
@@ -65,6 +65,7 @@
                     <th>Año de edición</th>
                     <th>Ver perfil</th>
                     <th>Editar</th>
+                    <th>Estado</th>
                     <th>Eliminar</th>
                 </tr>
             </thead>
@@ -148,6 +149,7 @@
     <script src="js/jquery-3.3.1.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/getNombre.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
     <script src="js/servicio_libro.js"></script>
     <script src="js/controlador_listar_libros.js"></script>
