--- a/base/public/modificar_libro.html
+++ b/base/public/modificar_libro.html
@@ -51,86 +51,91 @@
     <h1>Modificar Libro</h1>
 
 
-    <section id="datos_libro">
+    <section id="portada_libro">
       <div class="subir_imagen">
         <figure class="portada">
           <img src="imgs/img.png" alt="Seleccionar imagen" id="img_preview">
         </figure>
-        <button type="button" id="btn_seleccionar_imagen" class="boton_subir_imagen">Subir imagen </button>
-      </div>
+        <button type="button" id="btn_seleccionar_imagen" class="boton_subir_imagen">Portada </button>
 
-<!-- Aquí empieza el formulario del libro -->
-      <section id="sct_formulario">
-        <form>
-          <div>
-            <label for="txt_titulo">Título:</label>
-            <input id="txt_titulo" type="text">
-          </div>
-          <div>
-            <label for="txt_edicion">Edición:</label>
-            <input id="txt_edicion" type="text">
-          </div>
-          <div>
-            <label for="txt_editorial">Editorial:</label>
-            <input id="txt_editorial" type="text">
-          </div>
-          <div>
-            <label for="autor">Autor:</label>
-            <select name="autor" id="txt-nombre-autor">
-              <option value=""></option>
-              <!-- <option>Autor 1</option>
+        <figure class="contraPortada">
+          <img src="imgs/img.png" alt="Seleccionar imagen" id="img_preview">
+        </figure>
+        <button type="button" id="btn_seleccionar_imagen" class="boton_subir_imagen">Contraportada </button>
+      </div>
+    </section>
+    <!-- Aquí empieza el formulario del libro -->
+    <section id="sct_formulario">
+      <form>
+        <div>
+          <label for="txt_titulo">Título:</label>
+          <input id="txt_titulo" type="text">
+        </div>
+        <div>
+          <label for="txt_edicion">Edición:</label>
+          <input id="txt_edicion" type="text">
+        </div>
+        <div>
+          <label for="txt_editorial">Editorial:</label>
+          <input id="txt_editorial" type="text">
+        </div>
+        <div>
+          <label for="autor">Autor:</label>
+          <select name="autor" id="txt-nombre-autor">
+            <option value=""></option>
+            <!-- <option>Autor 1</option>
               <option>Autor 2</option>
               <option>Autor 3</option> -->
-            </select>
-          </div>
-          <div>
-            <label for="txt_anno_edicion">Año de edición:</label>
-            <input id="txt_anno_edicion" type="number">
-          </div>
-          <div>
-            <label for="idioma">Idioma:</label>
-            <select name="idioma" id="txt_idioma">
-              <option value=""></option>
-              <option>Español</option>
-              <option>Inglés</option>
-            </select>
-          </div>
-          <div>
-            <label for="txt_isbn">ISBN:</label>
-            <input id="txt_isbn" type="number">
-        </form>
-        </div>
-        <div>
-          <label for="genero">Seleccionar género</label>
-          <select name="genero" id="txt_genero">
-            <option value=""></option>
           </select>
         </div>
         <div>
-          <label for="tipo">Tipo</label>
-          <select name="tipo" id="txt_tipo">
+          <label for="txt_anno_edicion">Año de edición:</label>
+          <input id="txt_anno_edicion" type="number">
+        </div>
+        <div>
+          <label for="idioma">Idioma:</label>
+          <select name="idioma" id="txt_idioma">
             <option value=""></option>
-            <option value="Digital">Digital</option>
-            <option value="Pasta dura">Pasta dura</option>
-            <option value="Pasta gruesa">Pasta gruesa</option>
-            <option value="bolsillo">Bolsillo</option>
+            <option>Español</option>
+            <option>Inglés</option>
           </select>
         </div>
         <div>
-          <label for="existencia">Existencia:</label>
-          <input id="txt_existencia" type="number">
-        </div>
-        <div>
-          <label for="precio">Precio:</label>
-          <input id="txt_precio" type="number">
-        </div>
-
-        </form>
-      </section>
-
-      <div>
-        <button type="button" class="boton-registrar" id="btn_guardar" >Guardar</button>
+          <label for="txt_isbn">ISBN:</label>
+          <input id="txt_isbn" type="number">
+      </form>
       </div>
+      <div>
+        <label for="genero">Seleccionar género</label>
+        <select name="genero" id="txt_genero">
+          <option value=""></option>
+        </select>
+      </div>
+      <div>
+        <label for="tipo">Tipo</label>
+        <select name="tipo" id="txt_tipo">
+          <option value=""></option>
+          <option value="Digital">Digital</option>
+          <option value="Pasta dura">Pasta dura</option>
+          <option value="Pasta gruesa">Pasta gruesa</option>
+          <option value="bolsillo">Bolsillo</option>
+        </select>
+      </div>
+      <div>
+        <label for="existencia">Existencia:</label>
+        <input id="txt_existencia" type="number">
+      </div>
+      <div>
+        <label for="precio">Precio:</label>
+        <input id="txt_precio" type="number">
+      </div>
+
+      </form>
+    </section>
+
+    <div>
+      <button type="button" class="boton-registrar" id="btn_guardar">Guardar</button>
+    </div>
 
     </section>
 
@@ -153,7 +158,7 @@
   <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
   <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
   <script src="js/servicio_imagen.js"></script>
- 
+
 
 
 </body>
