--- a/base/public/index.html
+++ b/base/public/index.html
@@ -95,7 +95,7 @@
                 <button id="btnSignIn">Sign In</button>
             </div>
             <div class="forgot">
-                <a href="">Olvidé mi contraseña</a>
+                <a href="recuperar_contrasenna.html">Olvidé mi contraseña</a>
                 <a href="registrar_cliente.html">Registrarme</a>
             </div>
         </div>
