--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -52,7 +52,7 @@
             <a href="listar_tarjetas.html">Tarjetas</a>
             <a href="#" id="optionIntercambio">Intercambios</a>
             <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
-
+            <a href="inventario_libreria.html" id = "optionNavInventario">Inventario</a>
             <!--
               SOLO PARA PROBAR EL MODIFICAR CONTRASENNA
 
