--- a/base/public/modificar_tarjeta.html
+++ b/base/public/modificar_tarjeta.html
@@ -65,8 +65,8 @@
                 </div>
             </div>
             <div>
-                <button type="button" class="boton-registrar" id="modificar"  href="listar_tarjetas.html" >Guardar Tarjeta</button>
-              </div>
+                <button type="button" class="agregar" id="btn-agregar">Guardar Tarjeta</button>
+            </div>
         
 
 
@@ -160,7 +160,6 @@
 
   <script src="js/controlador_cerrar_sesion.js"></script>
   <script src="js/controlador_modificar_tarjeta.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
   <script src="js/servicio_tarjeta.js"></script>
   <script src="js/getNombre.js"></script>
   <script src="js/controlador_cerrar_sesion.js"></script>
