--- a/base/public/listar-usuarios.html
+++ b/base/public/listar-usuarios.html
@@ -146,6 +146,7 @@
 
   <script src="js/jquery-3.3.1.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
   <script src="js/servicio_usuario.js"></script>
   <script src="js/controlador-listar-usuarios.js"></script>
   <script src="js/getNombre.js"></script>
