--- a/base/public/registrar_libro.html
+++ b/base/public/registrar_libro.html
@@ -60,12 +60,12 @@
         
               <div class="subir_imagen">
                 <figure class="portada">
-                  <img src="imgs/img.png" alt="Seleccionar imagen" id="img_preview">
+                  <img src="imgs/img.png" alt="Seleccionar imagen" id="portada_preview">
                 </figure>
                 <button type="button" id="btn_seleccionar_portada" class="boton_subir_imagen">Portada </button>
 
                 <figure class="portada">
-                  <img src="imgs/img.png" alt="Seleccionar imagen" id="img_preview">
+                  <img src="imgs/img.png" alt="Seleccionar imagen" id="contraportada_preview">
                 </figure>
                 <button type="button" id="btn_seleccionar_contraportada" class="boton_subir_imagen">Contraportada </button>
               </div>
