--- a/base/public/modificar_genero.html
+++ b/base/public/modificar_genero.html
@@ -54,7 +54,7 @@
                   </div>
                 </div>
       
-                <button type="button" class="agregar" id="btn-modificar">Guardar Género</button>
+                <button type="button" class="agregar" id="btn-agregar">Guardar Género</button>
               </form>
 
 </main>
@@ -141,13 +141,10 @@
 
   <!-- script controlador -->
 
-  <script src="js/controlador_cerrar_sesion.js"></script>
+  <script src="js/servicio_genero.js"></script>
 
   <script src="js/controlador_modificar_genero.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
-  <script src="js/servicio_genero.js"></script>
-  <script src="js/getNombre.js"></script>
-  <script src="js/controlador_cerrar_sesion.js"></script>
 
 
 
