--- a/base/public/modificarClub.html
+++ b/base/public/modificarClub.html
@@ -120,7 +120,7 @@
         </form>
         <div class="btnsForm">
           <button id="btnCancelClub" class="cancel">Cancelar</button>
-          <button id="btnCrearClub" class="submit">Crear Club</button>
+          <button id="btnCrearClub" class="submit">Modificar Club</button>
         </div>
       </div>
   
