--- a/base/public/registrar_clubLectura.html
+++ b/base/public/registrar_clubLectura.html
@@ -135,6 +135,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <script src="js/controlador-clubLectura.js"></script>
+    <script src="js/servicio_chat.js"></script>
     <script src="js/servicio-clubLectura.js"></script>
     <script src="js/servicio_genero.js"></script>
     <script src="js/servicio_sucursales.js"></script>
